# accounts-service-gir

./: Cargo.toml
accounts-service/: Cargo.toml  Gir.toml
accounts-service-sys/: Cargo.toml  Gir.toml  build.rs
accounts-service-sys/src/: lib.rs
accounts-service-sys/src/auto/: versions.txt
accounts-service-sys/tests/: abi.rs  constant.c  layout.c
accounts-service/src/: lib.rs
accounts-service/src/auto/: enums.rs  mod.rs  user.rs  user_manager.rs  versions.txt
