[workspace]
members = [
  "accounts-service",
  "accounts-service-sys",
]
exclude = ["gir"]
resolver = "2"

[workspace.package]
authors = ["Serge Gris <sushilinsergey@gmail.com>"]
rust-version = "1.91"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
libc = "0.2"
bitflags = "2.0"
system-deps = "7"
shell-words = "1.0"
glib-sys = "0.21"
glib = "0.21"
gio-sys = "0.21"
gio = "0.21"
gobject-sys = "0.21"
accounts-service-sys = { path = "accounts-service-sys", version = "0.1" }
