[package]
name = "accounts-service-sys"
version = "0.1.2"
description = "Unsafe gir-generated FFI bindings for accountsservice"
repository = "https://github.com/SergeGris/accounts-service-gir/tree/master/accounts-service-sys"
documentation = "https://docs.rs/accounts-service-sys/"
keywords = ["accounts-service", "FFI", "unsafe"]
categories = ["external-ffi-bindings"]
build = "build.rs"

authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.system-deps.accountsservice]
name = "accountsservice"
version = "1"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[lib]
name = "accounts_service_sys"

[dependencies]
libc = "0.2"
glib-sys.workspace = true
gio-sys.workspace = true
gobject-sys.workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
