[package]
name = "accounts-service"
version = "0.1.2"
description = "Safe gir-generated wrapper for accountsservice"
repository = "https://github.com/SergeGris/accounts-service-gir/tree/master/accounts-service"
documentation = "https://docs.rs/accounts-service/"
keywords = ["accounts-service", "gir", "wrapper"]
categories = ["api-bindings"]
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[dependencies]
libc.workspace = true
glib.workspace = true
accounts-service-sys.workspace = true

[dev-dependencies]
gio.workspace = true
